サンプル更新

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         {
             "displayName": "SampleScene",
             "description": "This is a sample scene that includes examples of sending scores and receiving rankings.",
-            "path": "Samples~/SampleScene.unity"
+            "path": "Samples~/GASSampleScene"
         }
     ]
 }
